--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--if you hit ! and press enter you get a boiler plate 
+template code for html, which has been helpful 
+for me to evade errors-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
